[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Seb/Glitch System/Bases/GlitchBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Delet Particles.tscn" type="PackedScene" id=2]

[node name="Glitch Base" type="Node2D"]
position = Vector2( 41.4199, 17.0089 )
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -4.83765
margin_top = -7.33419
margin_right = 35.1624
margin_bottom = 32.6658
mouse_filter = 1
custom_colors/default_color = Color( 0, 0, 0, 0 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldown Timer" type="Timer" parent="."]
pause_mode = 1
one_shot = true

[node name="Active Timer" type="Timer" parent="."]
pause_mode = 1
one_shot = true

[node name="CPUParticles2D" parent="." instance=ExtResource( 2 )]
light_mask = 1
[connection signal="timeout" from="Cooldown Timer" to="." method="OnCooldownComplete"]
[connection signal="timeout" from="Active Timer" to="." method="OnDeactivateGlitch"]
